# kong_college_project

./: .gitignore  CMakeLists.txt  main.cpp
Recognition_lib/: Recognition.cpp
Recognition_lib/preprocess/include/: preprocess_0_bar_roi.h  preprocess_0_hough_tool.h  preprocess_0_watch_hough_line.h  preprocess_3_horizon_map_to_find_line.h
Recognition_lib/preprocess/src/: preprocess_0_bar_roi.cpp  preprocess_0_hough_tool.cpp  preprocess_2_binary.cpp  preprocess_4_distance_detect.cpp  preprocess_5_find_staff.cpp  preprocess_6_reduce_line.cpp  preprocess_7_cut_according_staff.cpp
Recognition_lib/recognition/include/: recognition_0_all_head.h  recognition_0_array_tools.h  recognition_0_debug_tools.h  recognition_0_vertical_map_to_speed_up.h  recognition_1_find_all_maybe_head_method_2.h  recognition_2_b_head_recheck.h  recognition_3_a_find_vertical_bar.h  recognition_3_b_find_time_bar.h  recognition_3_c_merge_head_and_time.h  recognition_4_find_picth.h
Recognition_lib/recognition/src/: recognition_0_all_head.cpp  recognition_0_array_tools.cpp  recognition_0_debug_tools.cpp  recognition_1_find_all_maybe_head.cpp  recognition_2_a_head_charactaristic.cpp  recognition_2_b_head_recheck.cpp  recognition_3_c_merge_head_and_time.cpp
String_tool_lib/: string_tool.cpp  string_tools.cpp
String_tool_lib/include/: string_tool.h
include/: Game_UI.h  Generate_Play_Midi.h  ScreenTool.h  UI_loading.h  UserEnterFile.h
lib/Directory_lib/include/: DirectoryTool.h
lib/Note_lib/: Bar_tool.cpp  Maybe_head_tool.cpp  Note_infos.cpp
lib/Note_lib/include/: Maybe_head_tool.h  Note_infos.h
lib/Recognition_lib/: Recognition.cpp
lib/Recognition_lib/include/: Recognition.h
lib/Recognition_lib/preprocess/include/: preprocess_0_bar_roi.h  preprocess_0_hough_tool.h  preprocess_0_watch_hough_line.h  preprocess_1_warp_straight_rough.h  preprocess_2_binary.h  preprocess_3_center_roi.h  preprocess_3_horizon_map_to_find_line.h  preprocess_4_distance_detect.h  preprocess_5_find_staff.h  preprocess_6_find_head.h  preprocess_6_find_head_and_erase_line.h  preprocess_6_reduce_line.h  preprocess_7_cut_according_staff.h
lib/Recognition_lib/preprocess/src/: preprocess_0_bar_roi.cpp  preprocess_0_hough_tool.cpp  preprocess_0_watch_hough_line.cpp  preprocess_1_warp_straight_rough.cpp  preprocess_2_binary.cpp  preprocess_3_bar_roi.cpp  preprocess_3_center_roi.cpp  preprocess_3_horizon_map_to_find_line.cpp  preprocess_4_distance_detect.cpp  preprocess_5_find_staff.cpp  preprocess_6_find_head.cpp  preprocess_6_find_head_and_erase_line.cpp  preprocess_6_reduce_line.cpp  preprocess_7_cut_according_staff.cpp
lib/Recognition_lib/recognition/include/: UI_loading.h  recognition_0_all_head.h  recognition_0_array_tools.h  recognition_0_debug_tools.h  recognition_0_vertical_map_to_speed_up.h  recognition_1_find_all_maybe_head.h  recognition_1_find_all_maybe_head_method_2.h  recognition_2_a_head_charactaristic.h  recognition_2_b_head_recheck.h  recognition_3_a_find_vertical_bar.h  recognition_3_b_find_time_bar.h  recognition_3_c_merge_head_and_time.h  recognition_4_find_picth.h
lib/Recognition_lib/recognition/src/: UI_loading.cpp  recognition_0_all_head.cpp  recognition_0_array_tools.cpp  recognition_0_debug_tools.cpp  recognition_0_vertical_map_to_speed_up.cpp  recognition_1_find_all_maybe_head.cpp  recognition_1_find_all_maybe_head_method_2.cpp  recognition_2_a_head_charactaristic.cpp  recognition_2_b_head_recheck.cpp  recognition_3_a_find_vertical_bar.cpp  recognition_3_b_find_time_bar.cpp  recognition_3_c_merge_head_and_time.cpp  recognition_4_find_picth.cpp
lib/String_tool_lib/: string_tools.cpp
lib/String_tool_lib/include/: string_tools.h
src/: DirectoryTool.cpp  Game_UI.cpp  Generate_Play_Midi.cpp  ScreenTool.cpp  UI_loading.cpp  UserEnterFile.cpp
